--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "test": "gulp test"
   },
-  "description": "Like `Object.defineProperty()` but better",
+  "description": "Like `Object.defineProperty()` but better.",
   "keywords": [
     "browser",
     "configurable",
