--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "lib": "src",
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "is-plain-obj": "^4.1.0"
+  },
   "devDependencies": {
     "@ehmicky/dev-tasks": "^1.0.102"
   },
