--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "is-plain-obj": "^4.1.0"
   },
   "devDependencies": {
-    "@ehmicky/dev-tasks": "^1.0.102"
+    "@ehmicky/dev-tasks": "^1.0.102",
+    "test-each": "^5.6.0"
   },
   "engines": {
     "node": ">=14.18.0"
