--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "template-name",
+  "projectName": "redefine-property",
   "projectOwner": "ehmicky",
   "repoType": "github",
   "repoHost": "https://github.com",
