--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-name",
+  "name": "redefine-property",
   "version": "0.0.1",
   "type": "module",
   "exports": {
@@ -16,13 +16,13 @@
   "scripts": {
     "test": "gulp test"
   },
-  "description": "template-description",
+  "description": "Like `Object.defineProperty()` but better",
   "keywords": [],
   "license": "MIT",
-  "homepage": "https://www.github.com/ehmicky/template-name",
-  "repository": "ehmicky/template-name",
+  "homepage": "https://www.github.com/ehmicky/redefine-property",
+  "repository": "ehmicky/redefine-property",
   "bugs": {
-    "url": "https://github.com/ehmicky/template-name/issues"
+    "url": "https://github.com/ehmicky/redefine-property/issues"
   },
   "author": "ehmicky <ehmicky@gmail.com> (https://github.com/ehmicky)",
   "directories": {
