Adding npm keywords

--- a/package.json
+++ b/package.json
@@ -17,7 +17,28 @@
     "test": "gulp test"
   },
   "description": "Like `Object.defineProperty()` but better",
-  "keywords": [],
+  "keywords": [
+    "browser",
+    "configurable",
+    "define",
+    "define-property",
+    "defineproperty",
+    "descriptor",
+    "descriptors",
+    "enumerability",
+    "enumerable",
+    "get-set",
+    "javascript",
+    "library",
+    "nodejs",
+    "object",
+    "properties",
+    "property",
+    "readonly",
+    "reflect",
+    "typescript",
+    "writable"
+  ],
   "license": "MIT",
   "homepage": "https://www.github.com/ehmicky/redefine-property",
   "repository": "ehmicky/redefine-property",
