--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "main": "./build/src/main.js",
   "types": "./build/src/main.d.ts",
   "files": [
-    "build/src/**/*.{js,json,d.ts}"
+    "build/src/**/*.{js,json,d.ts}",
+    "!build/src/**/*.test.js",
+    "!build/src/{helpers,fixtures}/**/*.js"
   ],
   "sideEffects": false,
   "scripts": {
@@ -53,7 +55,7 @@
     "is-plain-obj": "^4.1.0"
   },
   "devDependencies": {
-    "@ehmicky/dev-tasks": "^1.0.143",
+    "@ehmicky/dev-tasks": "^2.0.0",
     "test-each": "^5.6.0"
   },
   "engines": {
