--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
   ],
   "license": "MIT",
   "homepage": "https://www.github.com/ehmicky/redefine-property",
-  "repository": "ehmicky/redefine-property",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ehmicky/redefine-property.git"
+  },
   "bugs": {
     "url": "https://github.com/ehmicky/redefine-property/issues"
   },
